--- a/ExampleDBEntities/Auction.Model/Auction.Model.csproj
+++ b/ExampleDBEntities/Auction.Model/Auction.Model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Auction.cs" />
     <Compile Include="IModel.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="Serializer\IModelSerializer.cs" />
     <Compile Include="Serializer\ModelSerializer.cs" />
     <Compile Include="Product.cs" />
