--- a/ExampleDBEntities/Auction.Web/Auction.Web.csproj
+++ b/ExampleDBEntities/Auction.Web/Auction.Web.csproj
@@ -123,13 +123,19 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\AuctionRealtor\AuctionRealtorAreaRegistration.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\WebConfigHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\AuthoriseProviderAttribute.cs" />
     <Compile Include="Utils\CryproUtil.cs" />
+    <Compile Include="ViewModels\AuctionViewModel.cs" />
+    <Compile Include="ViewModels\ProductViewModel.cs" />
+    <Compile Include="ViewModels\UserRoleViewModel.cs" />
+    <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\auction.css" />
@@ -169,14 +175,15 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Registration.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\AuctionRealtor\Controllers\" />
     <Folder Include="Areas\AuctionRealtor\Models\" />
     <Folder Include="Areas\AuctionRealtor\Views\Shared\" />
     <Folder Include="Filters\" />
-    <Folder Include="Providers\" />
-    <Folder Include="ViewModels\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
