--- a/ExampleDBEntities/Auction.Data/Auction.Data.csproj
+++ b/ExampleDBEntities/Auction.Data/Auction.Data.csproj
@@ -51,6 +51,14 @@
     <Compile Include="Migrations\201512061811534_InitialMigration.Designer.cs">
       <DependentUpon>201512061811534_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512062253134_AddImageToProductModel.cs" />
+    <Compile Include="Migrations\201512062253134_AddImageToProductModel.Designer.cs">
+      <DependentUpon>201512062253134_AddImageToProductModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512062256376_AddApprovedByToAuctionModel.cs" />
+    <Compile Include="Migrations\201512062256376_AddApprovedByToAuctionModel.Designer.cs">
+      <DependentUpon>201512062256376_AddApprovedByToAuctionModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
@@ -72,6 +80,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201512061811534_InitialMigration.resx">
       <DependentUpon>201512061811534_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512062253134_AddImageToProductModel.resx">
+      <DependentUpon>201512062253134_AddImageToProductModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512062256376_AddApprovedByToAuctionModel.resx">
+      <DependentUpon>201512062256376_AddApprovedByToAuctionModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
