--- a/ExampleDBEntities/Auction.Data/Auction.Data.csproj
+++ b/ExampleDBEntities/Auction.Data/Auction.Data.csproj
@@ -59,8 +59,14 @@
     <Compile Include="Migrations\201512062256376_AddApprovedByToAuctionModel.Designer.cs">
       <DependentUpon>201512062256376_AddApprovedByToAuctionModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512062357052_NullableApprovedBy.cs" />
+    <Compile Include="Migrations\201512062357052_NullableApprovedBy.Designer.cs">
+      <DependentUpon>201512062357052_NullableApprovedBy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AuctionRepository.cs" />
+    <Compile Include="Repository\IAuctionRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\IUserRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512062256376_AddApprovedByToAuctionModel.resx">
       <DependentUpon>201512062256376_AddApprovedByToAuctionModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512062357052_NullableApprovedBy.resx">
+      <DependentUpon>201512062357052_NullableApprovedBy.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
