--- a/ExampleDBEntities/Auction.Web/Auction.Web.csproj
+++ b/ExampleDBEntities/Auction.Web/Auction.Web.csproj
@@ -158,6 +158,7 @@
     <Content Include="Areas\AuctionRealtor\Views\_ViewStart.cshtml" />
     <Content Include="Areas\AuctionRealtor\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\AuctionRealtor\Views\Realtor\Index.cshtml" />
+    <Content Include="Areas\AuctionRealtor\Views\Realtor\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
